--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>integration-challenge</name>
+	<name>desafio-mule</name>
 	<comment></comment>
 	<projects>
 	</projects>
